# qmark

./: .gitignore  .replit  ANALYSE_COMPLETE_QMARK.md  ANALYSE_FINALE_COMPLETE.md  CMakeLists.txt  CONFIGURATION_FACEBOOK_OAUTH.md  DIAGNOSTICO_PROBLEMA_FACEBOOK_OAUTH.md  RAPPORT_CONFIGURATION_OAUTH.md  clone_qmark.py  df  package-lock.json  package.json  update-reports.js
attached_assets/: Pasted--Cahier-des-Charges-Projet-QMARK-1-Objectif-Cr-er-une-plateforme-SaaS-automatis-e--1748011935497.txt  Pasted--rest-express-1-0-0-dev-6-01-29-PM-express-serving-on-port-5000s-Browserslist-browsers-data-ca-1748285165879.txt  Pasted-55-potential-vulnerabilities-found-Last-ran-on-8-04-pm-May-26-2025-Detected-potential-vulnerabil-1748285147980.txt  Pasted-Pour-vous-aider-identifier-des-petites-entreprises-qui-pourraient-tre-int-ress-es-par-une-solutio-1748012000059.txt
client/src/: App.tsx  index.css  main.tsx
client/src/components/: activity-feed.tsx  connections-card.tsx  dashboard-header.tsx  dashboard-sidebar.tsx  metrics-grid.tsx  oauth-modal.tsx  performance-chart.tsx  quick-actions.tsx  remediation-tasks.tsx  security-dashboard.tsx  server-status.tsx  vulnerability-breakdown.tsx
client/src/lib/: security-api.ts
client/src/pages/: dashboard.tsx  data-deletion.tsx  landing.tsx  privacy-policy.tsx  terms-of-service.tsx
include/: qmark.hpp
include/database/: database_manager.hpp
include/security/: encryption.hpp
include/server/: http_server.hpp
include/utils/: logger.hpp
qmark/: .replit  main.py  package-lock.json  package.json
qmark/client/src/: index.css
qmark/client/src/pages/: oauth-callback.tsx
qmark/server/: google-test.ts  setup-api.ts
server/: api-validator.ts  encryption.ts  google-test.ts  oauth.ts  replitAuth.ts  routes.ts  security-scanner.ts  storage.ts
shared/: schema.ts
src/: main.cpp  qmark_json.cpp
src/database/: database_manager.cpp
src/security/: encryption.cpp
src/server/: http_server.cpp
src/utils/: logger.cpp
tests/: unit-tests.js
